[project]
name = "profanity_free"
version = "0.0.0"
description = "Validates that a translated text does not contain profanity language."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "alt-profanity-check",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2",
    "pytest"
]